# rust-slackbot-llm

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 20231021093421_initial.sql  20231120202003_queue.sql
src/: lib.rs  main.rs
src/llm/: mod.rs  utils.rs
src/routes/: error_handling.rs  llm.rs  mod.rs  pages.rs
tests/: integration_tests.rs
