[package]
name = "rust-slackbot-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1" }
serde_json = "1"
uuid = { version = "1.3", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
bincode = "1.3"
futures = "0.3"
dotenvy = "0.15"
