[package]
name = "rust-slackbot-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1" }
serde_json = "1"
uuid = { version = "1.3", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
bincode = "1.3"
dotenvy = "0.15"
plotters = "0.3"
plotters-bitmap = "0.3"
image = { version = "0.24", features = ["png"] }
candle = { version = "0.4", package = "candle-core" }
candle-nn = { version = "0.4" }
candle-transformers = { version = "0.4" }
hf-hub = "0.3.2"
tokenizers = "0.15"
thread-priority = "0.16"
regex = "1.5"
chrono = "0.4.33"

[profile.dev.package."*"]
opt-level = 3
